minor grammer fix

--- a/notebooks/6.feature_scaling/feature_scaling.ipynb
+++ b/notebooks/6.feature_scaling/feature_scaling.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Features on a different scale is a common issue data scientists face. Some algorithms can handle it but some don't and if not scaled properly beforehand, they will have a hard time finding the optimal solution. So, why does it matter and how can we solve it?\n",
     "\n",
-    "First, let's see why it matters. In KNN, for example, which uses Euclidean distance to determine the similarity between points, features with bigger magnitude will influence much more on the distance than the ones with smaller magnitude. In gradient descent, features on a different scale will have different step size and it will take longer time to converge as shown below.\n",
+    "First, let's see why it matters. In KNN, for example, which uses Euclidean distance to determine the similarity between points, features with a bigger magnitude will influence much more on the distance than the ones with a smaller magnitude. In gradient descent, features on a different scale will have different step sizes and it will take a longer time to converge as shown below.\n",
     "\n",
     "\n",
     "<br>\n",
@@ -47,7 +47,7 @@
     "</div>\n",
     "<br>\n",
     "\n",
-    "The almost only exception is tree-based algorithms that use Gini impurity or information gain which are not influenced by feature scale. Here are the summary of machine learning models:\n",
+    "The almost only exception is tree-based algorithms that use Gini impurity or information gain which are not influenced by feature scale. Here is the summary of machine learning models:\n",
     "\n",
     "**ML Models sensitive to feature scale**\n",
     "\n",
@@ -133,7 +133,7 @@
    "metadata": {},
    "source": [
     "<a id=org></a>\n",
-    "## 0. Original Data"
+    "## Original Data"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To quantify the difference in scale between features, we can check some statistic such as mean, standard deviation, minimum, or maximum of observations within each feature. Indeed, they are all very different in their scale and this will be a problem when training certain types of model that requires data to be on the same scale."
+    "To quantify the difference in scale between features, we can check some statistics such as mean, standard deviation, minimum, or maximum of observations within each feature. Indeed, they are all very different in their scale and this will be a problem when training certain types of model that requires data to be on the same scale."
    ]
   },
   {
@@ -517,7 +517,7 @@
     "\n",
     "When applying this to our data, we can see every feature is now within the same range. Note that this graph looks like there are values smaller than 0 and greater than 1, but it is because we are estimating density function from our non-smooth data and the actual values fall within 0 and 1 as you can see in the summary table.\n",
     "\n",
-    "You can also see 'CRIM' has majority of observations at around 0 and quickly fades out after that. This is because of extreme outliers. It would be wise to remove those outliers beforehand so the values are spread more evenly, which will help training."
+    "You can also see 'CRIM' has a majority of observations at around 0 and quickly fades out after that. This is because of extreme outliers. It would be wise to remove those outliers beforehand so the values are spread more evenly, which will help training."
    ]
   },
   {
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When there are both positive and negative values, it might be wise to keep the sign and only scale the magnitude, so the range becomes roughly [-1, 1]. For instance, if the original feature range is [-50, 50], then we can map it to [-1, 1] by simply dividing the values by the maximum absolute value. This is where max-abs normalizer comes in.\n",
+    "When there are both positive and negative values, it might be wise to keep the sign and only scale the magnitude, so the range becomes roughly [-1, 1]. For instance, if the original feature range is [-50, 50], then we can map it to [-1, 1] by simply dividing the values by the maximum absolute value. This is where the max-abs normalizer comes in.\n",
     "\n",
     "**Definition**\n",
     "- Scale the feature so it has a fixed range such as [-1, 1] \n",
@@ -668,7 +668,7 @@
     "\n",
     "**Advantages**\n",
     "- It is handy for features with both positive and negative values as it keeps the sign of values\n",
-    "- It does not shift or center the data, so it does not destroy any sparsity. This technique is often used sparse data.\n",
+    "- It does not shift or center the data, so it does not destroy any sparsity. This technique is often used in sparse data.\n",
     "\n",
     "**Limitations**\n",
     "- The mean and variance vary between features \n",
@@ -677,7 +677,7 @@
     "- The majority of data will be centered within a small range if there are extreme outliers\n",
     "\n",
     "\n",
-    "The graph below is almost the same as the result of min-max normalizer, as all of the features are positive values."
+    "The graph below is almost the same as the result of the min-max normalizer, as all of the features are positive values."
    ]
   },
   {
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mean normalizer is the same as min-max normalizer but, instead of setting the minimum to 0, it sets the mean to 0.\n",
+    "The mean normalizer is the same as the min-max normalizer but, instead of setting the minimum to 0, it sets the mean to 0.\n",
     "\n",
     "**Definition**\n",
     "- Center the feature at 0 and rescale the feature to [-1, 1]\n",
@@ -745,7 +745,7 @@
     "\n",
     "Unfortunately, there is no specialized function for mean normalization in scikit-learn. Instead, we can use the combination of StandardScaler to remove the mean and RobustScaler to dividing the values by the total value range. \n",
     "\n",
-    "You can see that now all features are centered around 0 while keeping the min-max range the same across them. This will be definitely handy when applying machine learning models. However, the variance still varies across them, keeping ones with extreme outliers (e.g. 'CRIM') mostly clustered at 0."
+    "You can see that now all features are centered around 0 while keeping the min-max range the same across them. This will be handy when applying machine learning models. However, the variance still varies across them, keeping ones with extreme outliers (e.g. 'CRIM') mostly clustered at 0."
    ]
   },
   {
@@ -805,25 +805,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final method is median-quantile normalization, which is also called robust scaler. It is called robust because it is robust to extreme outliers. \n",
+    "The final method is median-quantile normalization, which is also called a robust scaler. It is called robust because it is robust to extreme outliers. \n",
     "\n",
     "\n",
     "**Definition** \n",
-    "-  Set the median to 0 and scale to inter-quantile range (range between 25th quantile and 75th quantile)  \n",
+    "-  Set the median to 0 and scale to the inter-quantile range (range between 25th quantile and 75th quantile)  \n",
     "\n",
     "$$ X' = \\frac{X-\\text{median}(X)}{\\text{75th quantile}(X) - \\text{25th quantile}(X)} $$\n",
     "\n",
     "\n",
     "**Advantages**\n",
     "- It is robust to outliers so it is used for data with outliers\n",
-    "- It produces better spread of data for skewed distribution\n",
+    "- It produces a better spread of data for skewed distribution\n",
     "\n",
     "**Limitations**\n",
-    "- The variance and value range differ between features\n",
+    "- The variance and value range differs between features\n",
     "- It may not preserve the shape of the original distribution\n",
     "- It preserves outliers\n",
     "\n",
-    "As you can see in the right graph below, all of the transformed data has better spread and none of the features shows high concentration within a small range unlike other scaling techniques we reviewed so far. However, like the graph on the left, some features with extreme outliers (e.g. 'CRIM') shows a very wide range of values. This method does not set the fixed value range so the extreme values still exist in the data."
+    "As you can see in the right graph below, all of the transformed data has better spread and none of the features shows high concentration within a small range, unlike other scaling techniques we reviewed so far. However, like the graph on the left, some features with extreme outliers (e.g. 'CRIM') show a very wide range of values. This method does not set the fixed value range so the extreme values still exist in the data."
    ]
   },
   {
@@ -861,7 +861,7 @@
     "<a id=summary></a>\n",
     "# Summary \n",
     "\n",
-    "So far, we reviewed different methods to scale data. Like mentioned earlier, there is no method that works for every problem. We would need to try different scalers and find the one that works best for a specific application. However, the rule of thumb is, try to use standardization and min-max normalization first and see if other methods or tweaks need to be applied. Some criterion to consider are: 1) does the algorithm prefer data cetered at 0? 2) does the algorithm prefer data to be in a fixed range? Also, it is wise to handle outliers beforehand if necessary.\n",
+    "So far, we have reviewed different methods to scale data. Like mentioned earlier, there is no method that works for every problem. We would need to try different scalers and find the one that works best for a specific application. However, the rule of thumb is, try to use standardization and min-max normalization first and see if other methods or tweaks need to be applied. Some criteria to consider are: 1) does the algorithm prefer data centered at 0? 2) does the algorithm prefer data to be in a fixed range? Also, it is wise to handle outliers beforehand if necessary.\n",
     "\n",
     "\n",
     "Here is the summary of the scaling methods reviewed in this post: \n",
@@ -888,6 +888,7 @@
    "metadata": {},
    "source": [
     "- [sciki-learn: Compare the effect of different scalers on data with outliers](https://scikit-learn.org/stable/auto_examples/preprocessing/plot_all_scaling.html#maxabsscaler)\n",
+    "- [Wikipedia: Feature Scaling](https://en.wikipedia.org/wiki/Feature_scaling)\n",
     "- [Statistics By Jim: Standardization](https://statisticsbyjim.com/glossary/standardization/)\n",
     "- [Analytics Vidhya: Feature Scaling for Machine Learning: Understanding the Difference Between Normalization vs. Standardization](https://www.analyticsvidhya.com/blog/2020/04/feature-scaling-machine-learning-normalization-standardization/)\n",
     "- [Sebastian Raschka: About Feature Scaling and Normalization](https://sebastianraschka.com/Articles/2014_about_feature_scaling.html#training-a-naive-bayes-classifier)\n",
