--- a/notebooks/6.feature_scaling/feature_scaling.ipynb
+++ b/notebooks/6.feature_scaling/feature_scaling.ipynb
@@ -34,9 +34,9 @@
     "# Why Do We Need Scaling?\n",
     "\n",
     "\n",
-    "Features on a different scale is a common issue data scientists face. Some algorithms can handle it but some don't and if not scaled properly beforehand, they will have a hard time finding the optimal solution. So, why does it matter and how can we solve it?\n",
+    "Features on a different scale is a common issue data scientists encounter. Some algorithms can handle it but some don't and if features are not scaled properly beforehand, we will have a hard time finding the optimal solution. So, why does it matter and how can we solve it?\n",
     "\n",
-    "First, let's see why it matters. In KNN, for example, which uses Euclidean distance to determine the similarity between points, features with a bigger magnitude will influence much more on the distance than the ones with a smaller magnitude. In gradient descent, features on a different scale will have different step sizes and it will take a longer time to converge as shown below.\n",
+    "First, let's think about KNN, which uses Euclidean distance to determine the similarity between points. When calculating the distance, features with a bigger magnitude will influence much more than the ones with a smaller magnitude, which leads to a solution dominated by the bigger features. Another example is algorithms using gradient descent. Features on a different scale will have different step sizes and it will take a longer time to converge as shown below.\n",
     "\n",
     "\n",
     "<br>\n",
@@ -47,11 +47,11 @@
     "</div>\n",
     "<br>\n",
     "\n",
-    "The almost only exception is tree-based algorithms that use Gini impurity or information gain which are not influenced by feature scale. Here is the summary of machine learning models:\n",
+    "The almost only exception is tree-based algorithms that use Gini impurity or information gain which are not influenced by feature scale. Here is some examples of machine learning models sensitive and non-sensitive to feature scale:\n",
     "\n",
     "**ML Models sensitive to feature scale**\n",
     "\n",
-    "* Algorithms that use Gradient Descent as an optimization technique \n",
+    "* Algorithms that use gradient descent as an optimization technique \n",
     "    * Linear and Logistic Regression (may not use Gradient Descent)\n",
     "    * Neural Networks \n",
     "* Distance-based algorithms\n",
@@ -59,13 +59,13 @@
     "    * KNN\n",
     "    * K-means clustering\n",
     "* Algorithms that find directions that maximize the variance\n",
-    "    * Linear Discriminant Analysis (LDA)\n",
     "    * Principal Component Analysis (PCA)\n",
-    "    \n",
+    "    * Linear Discriminant Analysis (LDA)  \n",
+    "  \n",
     "    \n",
     "**ML models not sensitive to feature scale**\n",
     "* Tree-based algorithms\n",
-    "  * Classification and Regression Trees \n",
+    "  * Decision Tree\n",
     "  * Random Forest \n",
     "  * Gradient Boosted Trees\n"
    ]
@@ -76,9 +76,9 @@
    "source": [
     "<a id=std_vs_norm></a>\n",
     "# Standardization vs. Normalization\n",
-    "So then how can we scale features? There are two types of scaling techniques depending on their focus: 1) standardization and 2) normalization.\n",
+    "How can we scale features then? There are two types of scaling techniques depending on their focus: 1) standardization and 2) normalization.\n",
     "\n",
-    "**Standardization** focuses on scaling the **_variance_** in addition to shifting the center to 0. It comes from the standardization in statistics, which converts a variable into $z-{score}$ that represents the number of standard deviations away from the mean no matter what the original value was.\n",
+    "**Standardization** focuses on scaling the **_variance_** in addition to shifting the center to 0. It comes from the standardization in statistics, which converts a variable into $z-{score}$ that represents the number of standard deviations away from the mean no matter what the original value is.\n",
     "\n",
     "**Normalization** focuses on scaling the **_min-max range_** rather than variance. For example, the original value range of [100, 200] is simply scaled to be [0, 1] by substracting the minimum value and dividing by the range. There are a few variations of normalization depending on whether it centers the data and what min/max value it uses: 1) min-max normalization, 2) max-abs normalization, 3) mean normalization, and 4) median-quantile normalization. \n",
     "\n",
@@ -99,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define functions used in this post\n",
+    "\n",
     "def kdeplot(df, scaler_name):\n",
     "    fix, ax = plt.subplots(figsize=(7, 5))\n",
     "    for feature in df.columns:\n",
@@ -140,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use the boston housing-prices dataset available in sklearn library. Among total 13 variables, we will focus on 6 variables for easier visualization: 'RM', 'LSTAT', 'CRIM', 'AGE', 'DIS', 'NOX'. As always, we split the data into train and test sets and use the train set for feature engineering to prevent data leakage during testing although we will not cover testing in this post. "
+    "We will use the boston housing-prices dataset available in sklearn library to demonstrate the effect of each scaler. Among total 13 variables, we will focus on 6 variables for easier visualization: 'RM', 'LSTAT', 'CRIM', 'AGE', 'DIS', 'NOX'. As always, we split the data into train and test sets and use the train set for feature engineering to prevent data leakage during testing although we will not cover testing in this post. "
    ]
   },
   {
@@ -375,105 +377,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RM</th>\n",
-       "      <th>LSTAT</th>\n",
-       "      <th>CRIM</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>DIS</th>\n",
-       "      <th>NOX</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>-5.419394e-16</td>\n",
-       "      <td>-3.663109e-16</td>\n",
-       "      <td>-1.505387e-17</td>\n",
-       "      <td>8.938236e-17</td>\n",
-       "      <td>2.258081e-17</td>\n",
-       "      <td>-1.655926e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.001415e+00</td>\n",
-       "      <td>1.001415e+00</td>\n",
-       "      <td>1.001415e+00</td>\n",
-       "      <td>1.001415e+00</td>\n",
-       "      <td>1.001415e+00</td>\n",
-       "      <td>1.001415e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>-3.919205e+00</td>\n",
-       "      <td>-1.515269e+00</td>\n",
-       "      <td>-4.018459e-01</td>\n",
-       "      <td>-2.360604e+00</td>\n",
-       "      <td>-1.253553e+00</td>\n",
-       "      <td>-1.482176e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>3.525700e+00</td>\n",
-       "      <td>3.471659e+00</td>\n",
-       "      <td>1.026419e+01</td>\n",
-       "      <td>1.107402e+00</td>\n",
-       "      <td>4.050895e+00</td>\n",
-       "      <td>2.727904e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                RM         LSTAT          CRIM           AGE           DIS  \\\n",
-       "mean -5.419394e-16 -3.663109e-16 -1.505387e-17  8.938236e-17  2.258081e-17   \n",
-       "std   1.001415e+00  1.001415e+00  1.001415e+00  1.001415e+00  1.001415e+00   \n",
-       "min  -3.919205e+00 -1.515269e+00 -4.018459e-01 -2.360604e+00 -1.253553e+00   \n",
-       "max   3.525700e+00  3.471659e+00  1.026419e+01  1.107402e+00  4.050895e+00   \n",
-       "\n",
-       "               NOX  \n",
-       "mean -1.655926e-16  \n",
-       "std   1.001415e+00  \n",
-       "min  -1.482176e+00  \n",
-       "max   2.727904e+00  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# summary table shows mean 0 and std 1 for every feature\n",
-    "X_train_scaled_std.describe().loc[['mean', 'std', 'min', 'max'], :]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -522,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +540,7 @@
        "max   1.000000  1.000000  1.000000  1.000000  1.000000  1.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +764,7 @@
     "<a id=summary></a>\n",
     "# Summary \n",
     "\n",
-    "So far, we have reviewed different methods to scale data. Like mentioned earlier, there is no method that works for every problem. We would need to try different scalers and find the one that works best for a specific application. However, the rule of thumb is, try to use standardization and min-max normalization first and see if other methods or tweaks need to be applied. Some criteria to consider are: 1) does the algorithm prefer data centered at 0? 2) does the algorithm prefer data to be in a fixed range? Also, it is wise to handle outliers beforehand if necessary.\n",
+    "We have reviewed five different scaling methods including one standardization and four normalization methods. Like mentioned earlier, there is no method that works for every problem. We would need to try different scalers and find the one that works best for a specific application. However, the rule of thumb is, try to use standardization or min-max normalization first and see if other methods or tweaks need to be applied. Some criteria to consider are: 1) does the algorithm prefer data to be centered at 0? 2) does the algorithm prefer data to be in a fixed range? Also, it is wise to handle outliers beforehand if necessary.\n",
     "\n",
     "\n",
     "Here is the summary of the scaling methods reviewed in this post: \n",
@@ -870,7 +773,7 @@
     "|--|--|--|--|--|--|\n",
     "| Concepts | Centering + Unit Variance| Fixed Range |  Fixed Range  | Centering + Fixed Range | Centering + Fixed Quantile Range|\n",
     "| Definition | Convert data to have zero mean and unit variance | Convert data to be within fixed range (e.g. [0, 1]) |Convert data to be within fixed range (e.g. [-1, 1]) | Convert data to have zero mean and be within fixed range (e.g. [-1, 1]) | Convert data to have zero median and unit interquantile range |\n",
-    "|Sklearn classes| StandardScaler| MinMaxScaler | MaxAbsScaler | StandardScaler + RobustScaler<br><br>* *StandardScaler only for mean removal and RobustScaler for scaling*<br>| RobustScaler|\n",
+    "|Sklearn class| StandardScaler| MinMaxScaler | MaxAbsScaler | StandardScaler + RobustScaler<br><br>* *StandardScaler only for mean removal and RobustScaler for scaling*<br>| RobustScaler|\n",
     "| Benefits | - Less sensitive to outliers <br>- Easier to compare and learn <br>- Preserves original distribution | - Features in the same range | - Features in the same range <br>- Preserves the sign (good for pos/neg mix) | - Features in the same range| - Least sensitive to outliers <br>- Better spread of values for skewed distribution |\n",
     "| Limitations |- Range varies between variables <br>- Preserves outliers | - Sensitive to outliers <br>- Mean and variance vary between features | - Sensitive to outliers <br>- Mean and variance vary between features | - Sensitive to outliers <br>-Variance varies between features | - Range varies between features <br>-Variance varies between features |\n"
    ]
@@ -923,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
